[package]
name = "compare-moxfield-deck-to-binder"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json = "1.0.140"
url = "2.5.4"
# uuid = { version = "1.16.0", features = ["v4"] }
